# board-game-scorer-for-android

./: README.md  local.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mobilenetv2.param
app/src/main/java/com/tencent/ncnnyolox/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  yolox.cpp  yolox.h  yoloxncnn.cpp
app/src/main/jni/MIPP/: mipp.h  mipp_object.hxx
app/src/main/res/layout/: main.xml
gradle/wrapper/: gradle-wrapper.properties
